[build-system]
requires = [
    "setuptools>=64",
    "wheel",
    "Cython>=0.29.36",
    "numpy>=1.22"
]
build-backend = "setuptools.build_meta"

[project]
name = "asmk"
version = "0.1"
description = "ASMK Python implementation for ECCV'20 paper 'Learning and aggregating deep local descriptors for instance-level recognition'"
authors = [
    {name = "Tomas Jenicek"},
    {name = "Giorgos Tolias"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pyaml"
]

[project.optional-dependencies]
cpu = ["faiss-cpu"]
gpu = ["faiss-gpu"]

[tool.setuptools.packages.find]
where = ["."]
include = ["asmk*"]
